Correcting the about page in spacing and making qual widths of sublinks and about me

--- a/style.css
+++ b/style.css
@@ -874,6 +874,7 @@ button:hover {
   .sub-links {
     display: flex;
     width: 100vw;
+    padding: 3rem 10px;
     justify-content: space-around;
   }
 
